--- a/cpu.qsf
+++ b/cpu.qsf
@@ -123,6 +123,7 @@ set_global_assignment -name VHDL_FILE neorv32/rtl/core/mem/neorv32_imem.default.
 set_global_assignment -name VHDL_FILE cpu_top.vhd
 set_global_assignment -name VHDL_FILE neorv32_cfs.vhd -library neorv32
 set_global_assignment -name VHDL_FILE convolve.vhd
-set_global_assignment -name VHDL_FILE convolve_single_cycle.vhd
-set_global_assignment -name VHDL_FILE convolve_pipelined.vhd
+set_global_assignment -name VHDL_FILE convolve_parallel.vhd
+set_global_assignment -name VHDL_FILE convolve_serial.vhd
+set_global_assignment -name VHDL_FILE isqrt.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
