--- a/cpu.qsf
+++ b/cpu.qsf
@@ -126,4 +126,5 @@ set_global_assignment -name VHDL_FILE convolve.vhd
 set_global_assignment -name VHDL_FILE convolve_parallel.vhd
 set_global_assignment -name VHDL_FILE convolve_serial.vhd
 set_global_assignment -name VHDL_FILE isqrt.vhd
+set_global_assignment -name QIP_FILE pll.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
