--- a/cpu.qsf
+++ b/cpu.qsf
@@ -126,65 +126,50 @@ set_global_assignment -name VHDL_FILE src/convolve.vhd
 set_global_assignment -name VHDL_FILE src/convolve_parallel.vhd
 set_global_assignment -name VHDL_FILE src/convolve_serial.vhd
 set_global_assignment -name VHDL_FILE src/isqrt.vhd
-set_global_assignment -name VHDL_FILE src/sdram_controller.vhd
+set_global_assignment -name VHDL_FILE src/sram_controller.vhd
 set_global_assignment -name QIP_FILE src/pll.qip
 
 
-set_location_assignment PIN_R6 -to dram_addr[0]
-set_location_assignment PIN_U8 -to dram_addr[2]
-set_location_assignment PIN_V8 -to dram_addr[1]
-set_location_assignment PIN_P1 -to dram_addr[3]
-set_location_assignment PIN_V5 -to dram_addr[4]
-set_location_assignment PIN_W8 -to dram_addr[5]
-set_location_assignment PIN_W7 -to dram_addr[6]
-set_location_assignment PIN_AA7 -to dram_addr[7]
-set_location_assignment PIN_Y5 -to dram_addr[8]
-set_location_assignment PIN_Y6 -to dram_addr[9]
-set_location_assignment PIN_R5 -to dram_addr[10]
-set_location_assignment PIN_AA5 -to dram_addr[11]
-set_location_assignment PIN_Y7 -to dram_addr[12]
-set_location_assignment PIN_U7 -to dram_bank[0]
-set_location_assignment PIN_R4 -to dram_bank[1]
-set_location_assignment PIN_V7 -to dram_cas_n
-set_location_assignment PIN_AA6 -to dram_cke
-set_location_assignment PIN_AE5 -to dram_clk
-set_location_assignment PIN_T4 -to dram_cs_n
-set_location_assignment PIN_U6 -to dram_ras_n
-set_location_assignment PIN_V6 -to dram_we_n
-set_location_assignment PIN_U2 -to dram_dqm[0]
-set_location_assignment PIN_W4 -to dram_dqm[1]
-set_location_assignment PIN_K8 -to dram_dqm[2]
-set_location_assignment PIN_N8 -to dram_dqm[3]
-set_location_assignment PIN_W3 -to dram_dq[0]
-set_location_assignment PIN_V4 -to dram_dq[2]
-set_location_assignment PIN_W2 -to dram_dq[1]
-set_location_assignment PIN_W1 -to dram_dq[3]
-set_location_assignment PIN_V3 -to dram_dq[4]
-set_location_assignment PIN_V2 -to dram_dq[5]
-set_location_assignment PIN_V1 -to dram_dq[6]
-set_location_assignment PIN_U3 -to dram_dq[7]
-set_location_assignment PIN_Y3 -to dram_dq[8]
-set_location_assignment PIN_Y4 -to dram_dq[9]
-set_location_assignment PIN_AB1 -to dram_dq[10]
-set_location_assignment PIN_AA3 -to dram_dq[11]
-set_location_assignment PIN_AB2 -to dram_dq[12]
-set_location_assignment PIN_AC1 -to dram_dq[13]
-set_location_assignment PIN_AB3 -to dram_dq[14]
-set_location_assignment PIN_AC2 -to dram_dq[15]
-set_location_assignment PIN_M8 -to dram_dq[16]
-set_location_assignment PIN_L8 -to dram_dq[17]
-set_location_assignment PIN_P2 -to dram_dq[18]
-set_location_assignment PIN_N3 -to dram_dq[19]
-set_location_assignment PIN_N4 -to dram_dq[20]
-set_location_assignment PIN_M4 -to dram_dq[21]
-set_location_assignment PIN_M7 -to dram_dq[22]
-set_location_assignment PIN_L7 -to dram_dq[23]
-set_location_assignment PIN_U5 -to dram_dq[24]
-set_location_assignment PIN_R7 -to dram_dq[25]
-set_location_assignment PIN_R1 -to dram_dq[26]
-set_location_assignment PIN_R2 -to dram_dq[27]
-set_location_assignment PIN_R3 -to dram_dq[28]
-set_location_assignment PIN_T3 -to dram_dq[29]
-set_location_assignment PIN_U4 -to dram_dq[30]
-set_location_assignment PIN_U1 -to dram_dq[31]
+
+set_location_assignment PIN_AB7 -to sram_addr[0]
+set_location_assignment PIN_AD7 -to sram_addr[1]
+set_location_assignment PIN_AE7 -to sram_addr[2]
+set_location_assignment PIN_AC7 -to sram_addr[3]
+set_location_assignment PIN_AB6 -to sram_addr[4]
+set_location_assignment PIN_AE6 -to sram_addr[5]
+set_location_assignment PIN_AB5 -to sram_addr[6]
+set_location_assignment PIN_AC5 -to sram_addr[7]
+set_location_assignment PIN_AF5 -to sram_addr[8]
+set_location_assignment PIN_T7 -to sram_addr[9]
+set_location_assignment PIN_AF2 -to sram_addr[10]
+set_location_assignment PIN_AD3 -to sram_addr[11]
+set_location_assignment PIN_AB4 -to sram_addr[12]
+set_location_assignment PIN_AC3 -to sram_addr[13]
+set_location_assignment PIN_AA4 -to sram_addr[14]
+set_location_assignment PIN_AB11 -to sram_addr[15]
+set_location_assignment PIN_AC11 -to sram_addr[16]
+set_location_assignment PIN_AB9 -to sram_addr[17]
+set_location_assignment PIN_AB8 -to sram_addr[18]
+set_location_assignment PIN_T8 -to sram_addr[19]
+set_location_assignment PIN_AF8 -to sram_ce_n
+set_location_assignment PIN_AH3 -to sram_dq[0]
+set_location_assignment PIN_AF4 -to sram_dq[1]
+set_location_assignment PIN_AG4 -to sram_dq[2]
+set_location_assignment PIN_AH4 -to sram_dq[3]
+set_location_assignment PIN_AF6 -to sram_dq[4]
+set_location_assignment PIN_AG6 -to sram_dq[5]
+set_location_assignment PIN_AH6 -to sram_dq[6]
+set_location_assignment PIN_AF7 -to sram_dq[7]
+set_location_assignment PIN_AD1 -to sram_dq[8]
+set_location_assignment PIN_AD2 -to sram_dq[9]
+set_location_assignment PIN_AE2 -to sram_dq[10]
+set_location_assignment PIN_AE1 -to sram_dq[11]
+set_location_assignment PIN_AE3 -to sram_dq[12]
+set_location_assignment PIN_AE4 -to sram_dq[13]
+set_location_assignment PIN_AF3 -to sram_dq[14]
+set_location_assignment PIN_AG3 -to sram_dq[15]
+set_location_assignment PIN_AC4 -to sram_hb_n
+set_location_assignment PIN_AD4 -to sram_lb_n
+set_location_assignment PIN_AD5 -to sram_oe_n
+set_location_assignment PIN_AE8 -to sram_we_n
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
